Compilation_Racket_Mips/piton/tests/errors/duplicate_defs.py
def a() -> int: return 1
def a() -> int: return 2